added bulma styling and public folder to views files

--- a/views/register.html
+++ b/views/register.html
@@ -1,44 +1,79 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Sign Up</title>
-  </head>
-  <body>
-    <header>
-      <h1>Coffee Chat App</h1>
-      <nav>
-        <ul>
-          <li>
-            <a href="/login">Already have an account? Login here.</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
 
-    <main>
-        <h1>Sign up to create an account</h1>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <title>Sign Up</title>
+</head>
 
-        <form id="registerForm" action="/register" method="post">
-            <fieldset>
-                <label for="first_name">First Name</label>
-                <input id="first_name" type="text" name="first_name">
-
-                <label for="last_name">Last Name</label>
-                <input id="last_name" type="text" name=last_name">
-
-                <label for="email">Email</label>
-                <input id="email" type="email" name="email">
-
-                <label for="password">Password</label>
-                <input id="password" type="password" name="password">
-
-                <input type="submit" value="Sign Up" />
-            </fieldset>
-        </form>
+<body>
 
 
-    </main>
+  <main>
+    <a href="/login">Already have an account? Log in here.</a>
 
-  </body>
+    <h1>Sign up to create an account</h1>
+
+    <form id="registerForm" action="/login" method="post">
+
+    <section class="field">
+      <label class="label" for="first_name">First Name</label>
+      <section class="control has-icons-left has-icons-right">
+        <input id="first_name" class="input" type="text" placeholder="Text input">
+        <span class="icon is-small is-left">
+          <i class="fas fa-user"></i>
+        </span>
+      </section>
+    </section>
+
+    <section class="field">
+      <label for="last_name" class="label">Last Name</label>
+      <section class="control has-icons-left has-icons-right">
+        <input id="last_name" class="input" type="text" placeholder="Text input">
+        <span class="icon is-small is-left">
+          <i class="fas fa-user"></i>
+        </span>
+      </section>
+    </section>
+
+    <section class="field">
+      <label for="email" class="label">Email</label>
+      <section class="control has-icons-left has-icons-right">
+        <input id="email" class="input" type="email" placeholder="Email input" >
+        <span class="icon is-small is-left">
+          <i class="fas fa-envelope"></i>
+        </span>
+      </section>
+    </section>
+
+    <section class="field">
+      <label for="password" class="label">Password</label>
+      <section class="control has-icons-left has-icons-right">
+        <input id="password" class="input" type="password" name="password">
+        <span class="icon is-small is-left">
+          <i class="fas fa-key"></i>
+        </span>
+      </section>
+    </section>
+
+    <section class="field is-grouped">
+      <section class="control">
+        <button id="submit" class="button is-link">Submit</button>
+      </section>
+
+      <section class="control">
+        <button class="button is-link is-light">Cancel</button>
+      </section>
+    </section>
+    </form
+
+  </main>
+
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+
+</body>
+
 </html>
