--- a/views/login.html
+++ b/views/login.html
@@ -1,39 +1,79 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Log In</title>
-  </head>
-  <body>
-    <header>
-      <h1>Coffee Chat App</h1>
-      <nav>
-        <ul>
-          <li>
-            <a href="/login">Don't have an account? Sign up here.</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
 
-    <main>
-        <h1>Log into your account</h1>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <title>Sign Up</title>
+</head>
 
-        <form id="loginForm" action="/login" method="post">
-            <fieldset>
+<body>
 
-                <label for="email">Email</label>
-                <input id="email" type="email" name="email">
+  <main>
+    <a href="/login">Don't have an account? Sign up here.</a>
 
-                <label for="password">Password</label>
-                <input id="password" type="password" name="password">
+    <h1>Log into your account</h1>
 
-                <input type="submit" value="Log In" />
-            </fieldset>
-        </form>
+    <form id="loginForm" action="/login" method="post">
+
+      <section class="field">
+        <label class="label" for="first_name">First Name</label>
+        <section class="control has-icons-left has-icons-right">
+          <input id="first_name" class="input" type="text" placeholder="Text input">
+          <span class="icon is-small is-left">
+            <i class="fas fa-user"></i>
+          </span>
+        </section>
+      </section>
+
+      <section class="field">
+        <label for="last_name" class="label">Last Name</label>
+        <section class="control has-icons-left has-icons-right">
+          <input id="last_name" class="input" type="text" placeholder="Text input">
+          <span class="icon is-small is-left">
+            <i class="fas fa-user"></i>
+          </span>
+        </section>
+      </section>
+
+      <section class="field">
+        <label for="email" class="label">Email</label>
+        <section class="control has-icons-left has-icons-right">
+          <input id="email" class="input" type="email" placeholder="Email input" >
+          <span class="icon is-small is-left">
+            <i class="fas fa-envelope"></i>
+          </span>
+        </section>
+      </section>
+
+      <section class="field">
+        <label for="password" class="label">Password</label>
+        <section class="control has-icons-left has-icons-right">
+          <input id="password" class="input" type="password" name="password">
+          <span class="icon is-small is-left">
+            <i class="fas fa-key"></i>
+          </span>
+        </section>
+      </section>
+
+      <section class="field is-grouped">
+        <section class="control">
+          <button id="submit" class="button is-link">Submit</button>
+        </section>
+
+        <section class="control">
+          <button class="button is-link is-light">Cancel</button>
+        </section>
+      </section>
+    </form>
 
 
-    </main>
+  </main>
 
-  </body>
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+
+</body>
+
 </html>
