--- a/views/register.html
+++ b/views/register.html
@@ -25,7 +25,7 @@
                 <input id="first_name" type="text" name="first_name">
 
                 <label for="last_name">Last Name</label>
-                <input id="last_name" type="text" name=last_name">
+                <input id="last_name" type="text" name="last_name">
 
                 <label for="email">Email</label>
                 <input id="email" type="email" name="email">
