adjustments to createEvents

--- a/views/createEvent.html
+++ b/views/createEvent.html
@@ -39,7 +39,11 @@
                 <label class="label" for="email">Event Title</label>
                 <input id="email" class="input" type="text" placeholder="Email Adress" name="email">
 
-                <label class="label">E vent Description</label>
+                <input type="date" id="date" name="event-start"
+                value="2020-04-15"
+                min="2020-04-15" max="2025-12-31">
+
+                <label class="label">Event Description</label>
                 <div class="control">
                   <textarea class="textarea" placeholder="Textarea"></textarea>
                 </div>
