--- a/views/home.html
+++ b/views/home.html
@@ -20,6 +20,9 @@
         .card {
             max-width: 60%;
         }
+        .rsvp {
+            /* background-color: #42cfb0; */
+        }
     </style>
 </head>
 
@@ -52,13 +55,13 @@
         <div class="card-content">
             <div class="content">
                 We chillin in the lounge
-                <a href="/">@Eveeryone</a>
+                <a href="/">@Everyone</a>
                 <br>
                 <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
             </div>
         </div>
         <footer class="card-footer">
-            <a href="#" class="card-footer-item">RSVP</a>
+            <a href="#" class="card-footer-item rsvp">RSVP</a>
             <a href="#" class="card-footer-item">View More</a>
         </footer>
     </div>
