added public/register file for user to register login working and script src added to views

--- a/views/register.html
+++ b/views/register.html
@@ -19,7 +19,7 @@
       <section class="field">
         <label class="label" for="firstName">First Name</label>
         <section class="control has-icons-left has-icons-right">
-          <input id="firstName" name ="firstName" class="input" type="text" placeholder="Text input" >
+          <input id="firstName" name="firstName" class="input" type="text" placeholder="Text input">
           <span class="icon is-small is-left">
             <i class="fas fa-user"></i>
           </span>
@@ -29,7 +29,7 @@
       <section class="field">
         <label for="lastName" class="label">Last Name</label>
         <section class="control has-icons-left has-icons-right">
-          <input id="lastName" name ="lastName" class="input" type="text" placeholder="Text input">
+          <input id="lastName" name="lastName" class="input" type="text" placeholder="Text input">
           <span class="icon is-small is-left">
             <i class="fas fa-user"></i>
           </span>
@@ -39,7 +39,7 @@
       <section class="field">
         <label for="email" class="label">Email</label>
         <section class="control has-icons-left has-icons-right">
-          <input id="email" name="email" class="input" type="email" placeholder="Email input" >
+          <input id="email" name="email" class="input" type="email" placeholder="Email input">
           <span class="icon is-small is-left">
             <i class="fas fa-envelope"></i>
           </span>
@@ -71,7 +71,7 @@
   </main>
 
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-
+  <script src="javascript/register.js" charset="utf-8"></script>
 </body>
 
 </html>
