--- a/views/login.html
+++ b/views/login.html
@@ -12,16 +12,16 @@
 <body>
 
   <main>
-    <a href="/register">Don't have an account? Sign up here.</a>
+    <a href="/login">Don't have an account? Sign up here.</a>
 
     <h1>Log into your account</h1>
 
     <form id="loginForm" action="/login" method="post">
-      
+
       <section class="field">
         <label for="email" class="label">Email</label>
         <section class="control has-icons-left has-icons-right">
-          <input id="email" name="email" class="input" type="email" placeholder="Email input" >
+          <input id="email" class="input" type="email" placeholder="Email input" name="email">
           <span class="icon is-small is-left">
             <i class="fas fa-envelope"></i>
           </span>
@@ -54,6 +54,7 @@
 
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 
+  <script src="javascript/login.js" charset="utf-8"></script>
 </body>
 
 </html>
