--- a/views/home.html
+++ b/views/home.html
@@ -23,34 +23,34 @@
       </a>
     </section>
   </nav>
-
-  <section class="card">
-    <header class="card-header">
-      <p class="card-header-title">
-        Lunch with the marcy lab fellows.
-      </p>
-      <a href="#" class="card-header-icon" aria-label="more options">
-        <span class="icon">
-          <i class="fas fa-angle-down" aria-hidden="true"></i>
-        </span>
-      </a>
-    </header>
-    <section class="card-content">
-      <section class="content">
-        We chillin in the lounge
-        <a href="/">@Everyone</a>
-        <br>
-        <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+  <section id="eventsSection">
+    <section class="card">
+      <header class="card-header">
+        <p class="card-header-title">
+          Lunch with the marcy lab fellows.
+        </p>
+        <a href="#" class="card-header-icon" aria-label="more options">
+          <span class="icon">
+            <i class="fas fa-angle-down" aria-hidden="true"></i>
+          </span>
+        </a>
+      </header>
+      <section class="card-content">
+        <section class="content">
+          We chillin in the lounge
+          <a href="/">@Everyone</a>
+          <br>
+          <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+        </section>
       </section>
     </section>
+    <footer class="card-footer">
+      <a href="#" class="card-footer-item rsvp">RSVP</a>
+      <a href="#" class="card-footer-item">View More</a>
+    </footer>
   </section>
-  <footer class="card-footer">
-    <a href="#" class="card-footer-item rsvp">RSVP</a>
-    <a href="#" class="card-footer-item">View More</a>
-  </footer>
 
-
-  <script src="home.js"></script>
+  <script src="./javascript/home.js"></script>
 </body>
 
 </html>
