--- a/views/createEvent.html
+++ b/views/createEvent.html
@@ -13,7 +13,7 @@
 
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <section class="navbar-brand ">
-      <a class="navbar-item" href="#">
+      <a class="navbar-item" href="/home">
         <p id='nav-logo'>CafeChats</p>
       </a>
 
@@ -28,26 +28,109 @@
   <main>
     <form id="eventForm" action="/events" method="POST">
       <fieldset>
-        <label class="label" for="firstName">First Name</label>
-        <input id="firstName" class="input" type="text" placeholder="First Name" name="firstName">
+        <label class="label" for="eventTitle">Event Title</label>
+        <input id="eventTitle" class="input" type="text" placeholder="Title" name="eventTitle">
 
-        <label class="label" for="lastName">Last Name</label>
-        <input id="lastName" class="input" type="text" placeholder="Last name" name="lastName">
-
-        <label class="label" for="email">Event Title</label>
-        <input id="email" class="input" type="text" placeholder="Email Adress" name="email">
-
+        <label class="label" for="date">Event Date</label>
         <input type="date" id="date" name="event-start" value="2020-04-15" min="2020-04-15" max="2025-12-31">
 
-        <label class="label">Event Description</label>
+        <label class="label" for="purpose">Purpose of Event</label>
         <section class="control">
-          <textarea class="textarea" placeholder="Textarea"></textarea>
+          <section id="purpose" class="select">
+            <select>
+              <option>Art</option>
+              <option>Community Service</option>
+              <option>Education</option>
+              <option>Entertainment</option>
+              <option>Food</option>
+              <option>Music</option>
+              <option>Tech</option>
+              <option>Other</option>
+
+            </select>
+          </section>
         </section>
+
+        <label class="label" for="purpose">Loaction</label>
+        <section class="control">
+          <section id="location" class="select">
+            <select>
+              <option value="AL">Alabama</option>
+              <option value="AK">Alaska</option>
+              <option value="AZ">Arizona</option>
+              <option value="AR">Arkansas</option>
+              <option value="CA">California</option>
+              <option value="CO">Colorado</option>
+              <option value="CT">Connecticut</option>
+              <option value="DE">Delaware</option>
+              <option value="DC">District Of Columbia</option>
+              <option value="FL">Florida</option>
+              <option value="GA">Georgia</option>
+              <option value="HI">Hawaii</option>
+              <option value="ID">Idaho</option>
+              <option value="IL">Illinois</option>
+              <option value="IN">Indiana</option>
+              <option value="IA">Iowa</option>
+              <option value="KS">Kansas</option>
+              <option value="KY">Kentucky</option>
+              <option value="LA">Louisiana</option>
+              <option value="ME">Maine</option>
+              <option value="MD">Maryland</option>
+              <option value="MA">Massachusetts</option>
+              <option value="MI">Michigan</option>
+              <option value="MN">Minnesota</option>
+              <option value="MS">Mississippi</option>
+              <option value="MO">Missouri</option>
+              <option value="MT">Montana</option>
+              <option value="NE">Nebraska</option>
+              <option value="NV">Nevada</option>
+              <option value="NH">New Hampshire</option>
+              <option value="NJ">New Jersey</option>
+              <option value="NM">New Mexico</option>
+              <option value="NY">New York</option>
+              <option value="NC">North Carolina</option>
+              <option value="ND">North Dakota</option>
+              <option value="OH">Ohio</option>
+              <option value="OK">Oklahoma</option>
+              <option value="OR">Oregon</option>
+              <option value="PA">Pennsylvania</option>
+              <option value="RI">Rhode Island</option>
+              <option value="SC">South Carolina</option>
+              <option value="SD">South Dakota</option>
+              <option value="TN">Tennessee</option>
+              <option value="TX">Texas</option>
+              <option value="UT">Utah</option>
+              <option value="VT">Vermont</option>
+              <option value="VA">Virginia</option>
+              <option value="WA">Washington</option>
+              <option value="WV">West Virginia</option>
+              <option value="WI">Wisconsin</option>
+              <option value="WY">Wyoming</option>
+            </select>
+          </section>
+        </section>
+
+        <label class="label" for="eventDescription">Event Description</label>
+        <section class="control">
+          <textarea id="eventDescription" name="eventDescription" class="textarea" placeholder="Describe what the purpose of your event is!"></textarea>
+        </section>
+
+        <label class="label" for="eventType">Event Type</label>
+        <section class="control">
+          <section id="eventType" class="select">
+            <select>
+              <option>In Person</option>
+              <option>Remote/Virtual</option>
+            </select>
+          </section>
+        </section>
+
       </fieldset>
 
       <input class="button is-link is-light" type="submit" value="Submit Event" />
     </form>
   </main>
+  <script src="javascript/createEvent.js" charset="utf-8"></script>
 </body>
 
 </html>
