--- a/views/createEvent.html
+++ b/views/createEvent.html
@@ -26,7 +26,7 @@
   </nav>
 
   <main>
-    <form id="eventForm" action="/events" method="POST">
+    <form id="updateEvent" action="/events" method="PUT">
       <fieldset>
         <label class="label" for="firstName">First Name</label>
         <input id="firstName" class="input" type="text" placeholder="First Name" name="firstName">
