added remove button and cleaned up some stuff , need to add event button

--- a/views/home.html
+++ b/views/home.html
@@ -40,7 +40,7 @@
           We chillin in the lounge
           <a href="/">@Everyone</a>
           <br>
-          <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+          <time datetime="2016-1-1"></time>
         </section>
       </section>
     </section>
