--- a/views/landing.html
+++ b/views/landing.html
@@ -18,69 +18,63 @@
 <body>
     <!-- START NAV -->
     <nav class="navbar">
-        <div class="container">
-            <div class="navbar-brand">
-                <a class="navbar-item" href="../">CoffeeChats</a>
+        <section class="container">
+            <section class="navbar-brand">
+                <a class="navbar-item" href="/">COMM ON</a>
                 <span class="navbar-burger burger" data-target="navbarMenu">
                         <span></span>
                 <span></span>
                 <span></span>
                 </span>
-            </div>
-            <div id="navbarMenu" class="navbar-menu">
-                <div class="navbar-end">
+            </section>
+            <section id="navbarMenu" class="navbar-menu">
+                <section class="navbar-end">
                     <a class="navbar-item is-active">
                             Home
                         </a>
-                </div>
-            </div>
-        </div>
+                </section>
+            </section>
+        </section>
     </nav>
     <!-- END NAV -->
 
     <section class="hero is-info is-medium is-bold">
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <h1 class="title">sdd</h1>
-            </div>
-        </div>
+        <section class="hero-body">
+            <section class="container has-text-centered">
+                <h1 class="title">COMM ON</h1>
+            </section>
+        </section>
     </section>
 
 
-    <div class="container">
-        <!-- START ARTICLE FEED -->
+    <section class="container">
         <section class="articles">
-            <div class="column is-8 is-offset-2">
-                <!-- START ARTICLE -->
-                <div class="card article">
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content has-text-centered">
-                                <p class="title article-title">Introducing a CoffeeChats, an app to host community events.</p>
-                            </div>
-                        </div>
-                        <div class="content article-body">
-                            <p>Non arcu risus quis varius quam quisque. Dictum varius duis at consectetur lorem. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper. </p>
-                            <p>Metus aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices. In hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Accumsan lacus vel facilisis volutpat. Non sodales neque sodales ut etiam.
-                                Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus.</p>
-                            <h3 class="has-text-centered">How to properly center tags in bulma?</h3>
-                            <p> Proper centering of tags in bulma is done with class: <pre>level-item</pre>
-                                Voluptat ut farmacium tellus in metus vulputate. Feugiat in fermentum posuere urna nec. Pharetra convallis posuere morbi leo urna molestie.
-                                Accumsan lacus vel facilisis volutpat est velit egestas. Fermentum leo vel orci porta. Faucibus interdum posuere lorem ipsum.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- END ARTICLE -->
-        </div>
+            <section class="column is-8 is-offset-2">
+                <section class="card article">
+                    <section class="card-content">
+                        <section class="media">
+                            <section class="media-content has-text-centered">
+                                <p class="title article-title">Introducing a COMM ON, an app to host community events.</p>
+                            </section>
+                        </section>
+                        <section class="content article-body">
+                            <p>COMM ON can help you bring a community together host an event where and when ever you'd like. </p>
+
+                            <h3 class="has-text-centered">How can i attend an event?</h3>
+                            <p>Browse through our many events and RSVP!</p>
+                        </section>
+                    </section>
+                </section>
+        </section>
         <script async type="text/javascript" src="../js/bulma.js"></script>
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.9.1/js/OverlayScrollbars.min.js'></script>  
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.9.1/js/OverlayScrollbars.min.js'></script>
         <script>
         document.addEventListener("DOMContentLoaded", function() {
         //The first argument are the elements to which the plugin shall be initialized
         //The second argument has to be at least a empty object or a object with your desired options
         OverlayScrollbars(document.querySelectorAll("body"), { });
         });
-        </script>        
+        </script>
 </body>
 
 </html>
