started create event form and route for hame page , finish delete, and need to add update

--- a/views/home.html
+++ b/views/home.html
@@ -14,7 +14,12 @@
     <section class="navbar-brand">
       <a class="navbar-item" href="https://bulma.io">
         <p id='nav-logo'>CafeChats</p>
+  
       </a>
+      <a class="navbar-item" href="/createEvent">
+        <p id='nav-logo'>Create Event</p>
+      </a>
+
 
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
         <span aria-hidden="true"></span>
