--- a/views/createEvent.html
+++ b/views/createEvent.html
@@ -26,18 +26,18 @@
   </nav>
 
   <main>
-    <form id="updateEvent" action="/events" method="PUT">
+    <form id="createEvent" action="#" method="#">
       <fieldset>
-        <label class="label" for="eventTitle">Event Title</label>
-        <input id="eventTitle" class="input" type="text" placeholder="Title" name="eventTitle">
+        <label class="label" for="title">Event Title</label>
+        <input id="eventTitle" class="input" type="text" placeholder="title" name="title">
 
         <label class="label" for="date">Event Date</label>
-        <input type="date" id="date" name="event-start" value="2020-04-15" min="2020-04-15" max="2025-12-31">
+        <input type="datetime-local" id="date" name="dateCreated" value="2020-04-15" min="2020-04-15" max="2025-12-31">
 
         <label class="label" for="purpose">Purpose of Event</label>
         <section class="control">
           <section id="purpose" class="select">
-            <select>
+            <select name="purpose">
               <option>Art</option>
               <option>Community Service</option>
               <option>Education</option>
@@ -54,19 +54,19 @@
         <section class="field">
           <label class="label" for="location">Location</label>
           <section class="control">
-            <input id="location" name="location" type="text" placeholder="Location" class="input">
+            <input id="location" name="location" type="text" placeholder="location" class="input">
           </section>
         </section>
 
-        <label class="label" for="eventDescription">Event Description</label>
+        <label class="label" for="description">Event Description</label>
         <section class="control">
-          <textarea id="eventDescription" name="eventDescription" class="textarea" placeholder="Describe what the purpose of your event is!"></textarea>
+          <textarea id="description" name="description" class="textarea" placeholder="Describe what the purpose of your event is!"></textarea>
         </section>
 
         <label class="label" for="eventType">Event Type</label>
         <section class="control">
           <section id="eventType" class="select">
-            <select>
+            <select name = "type">
               <option>In Person</option>
               <option>Remote/Virtual</option>
             </select>
