--- a/views/updateEvent.html
+++ b/views/updateEvent.html
@@ -32,7 +32,7 @@
         <input id="eventTitle" class="input" type="text" placeholder="Title" name="eventTitle">
 
         <label class="label" for="date">Event Date</label>
-        <input type="date" id="date" name="event-start" value="2020-04-15" min="2020-04-15" max="2025-12-31">
+        <input type="date" id="date" name="dateCreated" value="2020-04-15" min="2020-04-15" max="2025-12-31">
 
         <label class="label" for="purpose">Purpose of Event</label>
         <section class="control">
@@ -60,13 +60,13 @@
 
         <label class="label" for="eventDescription">Event Description</label>
         <section class="control">
-          <textarea id="eventDescription" name="eventDescription" class="textarea" placeholder="Describe what the purpose of your event is!"></textarea>
+          <textarea id="eventDescription" name="description" class="textarea" placeholder="Describe what the purpose of your event is!"></textarea>
         </section>
 
         <label class="label" for="eventType">Event Type</label>
         <section class="control">
           <section id="eventType" class="select">
-            <select>
+            <select name= "type">
               <option>In Person</option>
               <option>Remote/Virtual</option>
             </select>
