added nav bar with links to view files

--- a/views/landing.html
+++ b/views/landing.html
@@ -17,20 +17,36 @@
 
 <body>
   <!-- START NAV -->
-  <nav class="navbar">
+  <nav class="navbar" role="navigation" aria-label="main navigation">
     <section class="container">
+
       <section class="navbar-brand">
-        <a class="navbar-item" href="/">COMM ON</a>
-        <span class="navbar-burger burger" data-target="navbarMenu">
-          <span></span>
-          <span></span>
-          <span></span>
+        <a class="navbar-item" href="/">
+          <p id='nav-logo'>COMM ON</p>
+        </a>
+        <span role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
         </span>
       </section>
+
       <section id="navbarMenu" class="navbar-menu">
         <section class="navbar-end">
-          <a class="navbar-item is-active">
-            Home
+          <a class="navbar-item" href="/home">
+            <p id='nav-logo'>Events</p>
+          </a>
+          <a class="navbar-item" href="/events">
+            <p id='nav-logo'>My Events</p>
+          </a>
+          <a class="navbar-item" href="/">
+            <p id='nav-logo'>My RSVPs</p>
+          </a>
+          <a class="navbar-item" href="/login">
+            <p id='nav-logo'>Login</p>
+          </a>
+          <a class="navbar-item" href="/register">
+            <p id='nav-logo'>Sign Up</p>
           </a>
         </section>
       </section>
