--- a/views/login.html
+++ b/views/login.html
@@ -12,7 +12,7 @@
 <body>
 
   <main>
-    <a href="/login">Don't have an account? Sign up here.</a>
+    <a href="/register">Don't have an account? Sign up here.</a>
 
     <h1>Log into your account</h1>
 
