styled landing page created route for landing

--- a/views/landing.html
+++ b/views/landing.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <!-- Bulma Version 0.8.x-->
   <link rel="stylesheet" href="https://unpkg.com/bulma@0.8.0/css/bulma.min.css" />
-  <link rel="stylesheet" type="text/css" href="../css/blog.css">
+  <link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body>
@@ -55,9 +55,9 @@
   <!-- END NAV -->
 
   <section class="hero is-info is-medium is-bold">
-    <section class="hero-body">
+    <section class="hero-body" id="landingBanner">
       <section class="container has-text-centered">
-        <h1 class="title">COMM ON</h1>
+        <h1 class="title" id="landingBannerTitle">COMM ON</h1>
       </section>
     </section>
   </section>
@@ -65,12 +65,12 @@
 
   <section class="container">
     <section class="articles">
-      <section class="column is-8 is-offset-2">
+      <section class="column is-9 is-offset-3">
         <section class="card article">
           <section class="card-content">
             <section class="media">
               <section class="media-content has-text-centered">
-                <p class="title article-title">Introducing a COMM ON, an app to host community events.</p>
+                <p class="title article-title">Introducing COMM ON, an app to host community events.</p>
               </section>
             </section>
             <section class="content article-body">
