--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,18 +1,27 @@
-/* login and register html */
-form .field {
-	max-width: 800px;
+/* landing */
+#landingBanner {
+  background-image: url('/images/common_banner.jpg') !important;
+  background-position: center bottom;
+  background-color: #d4e2ef;
+  background-size: 400px;
+  background-repeat: no-repeat;
 }
 
-body{
+#landingBannerTitle {
+  vertical-align: text-top;
+  padding-bottom: 100px;
+}
+
+/* login and register html */
+form .field {
+  max-width: 800px;
+}
+
+body {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-
-}
-/* create event html */
-#creatEventBody {
-  padding: 20px;
 }
 
 /* home.html */
@@ -25,8 +34,14 @@ body{
 }
 
 .card {
-    max-width: 60%;
+  max-width: 60%;
 }
+
 .rsvp {
-    /* background-color: #42cfb0; */
+  /* background-color: #42cfb0; */
+}
+
+/* create event html */
+#creatEventBody {
+  padding: 20px;
 }
