corrected typo in landing

--- a/views/landing.html
+++ b/views/landing.html
@@ -62,7 +62,7 @@
             <section class="content has-text-centered">
               <p>COMM ON can help you bring a community together host an event where and when ever you'd like. </p>
 
-              <h3>How can i attend an event?</h3>
+              <h3>How can I attend an event?</h3>
               <p>Sign up to browse through our many events and RSVP!</p>
             </section>
           </section>
