need to fix createdEvent date time and fix update , and finish up readME

--- a/views/updateEvent.html
+++ b/views/updateEvent.html
@@ -54,7 +54,7 @@
         <label class="label" for="title">Event Title</label>
         <input id="title" class="input" type="text" placeholder="Title" name="title">
         <label class="label" for="date">Event Date</label>
-        <input type="date" id="date" name="dateCreated" value="2020-04-15" min="2020-04-15" max="2025-12-31">
+        <input type="date" id="date" name="date_time" value="2020-04-15" min="2020-04-15" max="2025-12-31">
         
         <label class="label" for="purpose">Purpose of Event</label>
         <section class="control">
@@ -101,7 +101,7 @@
       <input class="button is-link is-light" type="submit" value="Submit Event" />
     </form>
   </main>
-  <script src="javascript/home.js" charset="utf-8"></script>
+  <script src="./javascript/home.js" charset="utf-8"></script>
 </body>
 
 </html>
