--- a/views/createEvent.html
+++ b/views/createEvent.html
@@ -55,7 +55,7 @@
         <input name="title" id="eventTitle" class="input" type="text" placeholder="title" >
 
         <label class="label" for="date">Event Date</label>
-        <input type="datetime-local" id="date" name="dateCreated" value="2020-04-15" min="2020-04-15" max="2025-12-31">
+        <input type="datetime-local" id="date" name="date_time" value="2020-04-15" min="2020-04-15" max="2025-12-31">
 
         <label class="label" for="purpose">Purpose of Event</label>
         <section class="control">
