--- a/views/login.html
+++ b/views/login.html
@@ -49,7 +49,7 @@
             <section class="field">
               <label for="email" class="label">Email</label>
               <section class="control has-icons-left has-icons-right">
-                <input id="email" class="input" type="email" placeholder="Email input" name="Email">
+                <input id="email" class="input" type="email" placeholder="Email input" name="email">
                 <span class="icon is-small is-left">
                   <i class="fas fa-envelope"></i>
                 </span>
@@ -67,7 +67,7 @@
             </section>
 
             <section class="control">
-              <a href="/login">Don't have an account? Sign up here.</a>
+              <a href="//register">Don't have an account? Sign up here.</a>
             </section>
             <br>
 
