--- a/views/home.html
+++ b/views/home.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
 </head>
 
-<body id="homeBody">
+<body>
   <!-- START NAV -->
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <section class="container">
@@ -55,8 +56,95 @@
 
   </section>
 
+
+    <section class="section">
+      <section class="container">
+        <section class="columns is-centered">
+          <div id="cardsBody" class="column">
+            <div class="card card-toggle3">
+              <div class="card-image has-text-centered">
+                <i class="fa fa-3x fa-mobile"></i>
+              </div>
+              <div class="card-content">
+                <div class="content has-text-centered">
+                  <h4>Properties </h4>
+                  <a class="card-header-icon">
+                    <i class="fa fa-angle-down"></i>
+                  </a>
+                </div>
+              </div>
+              <div class="card-content is-hidden">
+                <div class="content has-text-centered">
+                  PROPERTIES TEXT
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </section>
+        </section>
+        </section>
+
+
+
+
+
+
+
+
+
+  <section class="container">
+	<div class="columns features">
+
+		<div class="column">
+			<div class="card card-toggle3">
+				<div class="card-image has-text-centered">
+					<i class="fa fa-3x fa-users"></i>
+				</div>
+				<div class="card-content">
+					<div class="content has-text-centered">
+						<h4>Buy </h4>
+						<a class="card-header-icon">
+							<i class="fa fa-angle-down"></i>
+						</a>
+					</div>
+				</div>
+				<div class="card-content is-hidden">
+					<div class="content has-text-centered">
+						BUY TEXT
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<div class="column">
+			<div class="card card-toggle3">
+				<div class="card-image has-text-centered">
+					<i class="fa fa-3x fa-rocket"></i>
+				</div>
+				<div class="card-content">
+					<div class="content has-text-centered">
+						<h4>Sell</h4>
+						<a class="card-header-icon">
+							<i class="fa fa-angle-down"></i>
+						</a>
+					</div>
+				</div>
+				<div class="card-content is-hidden">
+					<div class="content has-text-centered">
+						SELL TEXT
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+</section>
+
+
+
+
   <script src="./javascript/home.js"></script>
 </body>
 
 </html>
-
