fixed nav bar and authenticate

--- a/views/login.html
+++ b/views/login.html
@@ -67,7 +67,7 @@
             </section>
 
             <section class="control">
-              <a href="//register">Don't have an account? Sign up here.</a>
+              <a href="/register">Don't have an account? Sign up here.</a>
             </section>
             <br>
 
