updated html in home final styling

--- a/views/home.html
+++ b/views/home.html
@@ -14,128 +14,49 @@
   <!-- START NAV -->
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <section class="container">
-        <a class="navbar-item" href="/createEvent">
-          <p id='nav-logo'>Create Event</p>
-        </a>
-        <span role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-        </span>
-      </section>
+      <a class="navbar-item" href="/">
+        <p id='nav-logo'>COMM ON</p>
+      </a>
+      <span role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </span>
+    </section>
 
-      <section id="navbarMenu" class="navbar-menu">
-        <section class="navbar-end">
-          <a class="navbar-item" href="/home">
-            <p id='nav-logo'>Events</p>
-          </a>
-          <a class="navbar-item" href="/events">
-            <p id='nav-logo'>My Events</p>
-          </a>
-          <a class="navbar-item" href="/">
-            <p id='nav-logo'>My RSVPs</p>
-          </a>
-          <a class="navbar-item" href="/logout">
-            <p id='nav-logo'>Logout</p>
-          </a>
-        </section>
+    <section id="navbarMenu" class="navbar-menu">
+      <section class="navbar-end">
+        <a class="navbar-item" href="/home">
+          <p id='nav-logo'>Events</p>
+        </a>
+        <a class="navbar-item" href="/createEvent">
+          <p id='nav-logo'>Create an Event</p>
+        </a>
+        <a class="navbar-item" href="/events">
+          <p id='nav-logo'>My Events</p>
+        </a>
+        <a class="navbar-item" href="/">
+          <p id='nav-logo'>My RSVPs</p>
+        </a>
+        <a class="navbar-item" href="/logout">
+          <p id='nav-logo'>Logout</p>
+        </a>
       </section>
+    </section>
     </section>
   </nav>
   <!-- END NAV -->
 
-  <section id="eventsSection">
+  <section class="section">
+    <section class="container">
+      <section class="columns is-centered">
+        <section id="eventsSection">
 
+        </section>
+      </section>
+    </section>
   </section>
-
-
-    <section class="section">
-      <section class="container">
-        <section class="columns is-centered">
-          <div id="cardsBody" class="column">
-            <div class="card card-toggle3">
-              <div class="card-image has-text-centered">
-                <i class="fa fa-3x fa-mobile"></i>
-              </div>
-              <div class="card-content">
-                <div class="content has-text-centered">
-                  <h4>Properties </h4>
-                  <a class="card-header-icon">
-                    <i class="fa fa-angle-down"></i>
-                  </a>
-                </div>
-              </div>
-              <div class="card-content is-hidden">
-                <div class="content has-text-centered">
-                  PROPERTIES TEXT
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </section>
-        </section>
-        </section>
-
-
-
-
-
-
-
-
-
-  <section class="container">
-	<div class="columns features">
-
-		<div class="column">
-			<div class="card card-toggle3">
-				<div class="card-image has-text-centered">
-					<i class="fa fa-3x fa-users"></i>
-				</div>
-				<div class="card-content">
-					<div class="content has-text-centered">
-						<h4>Buy </h4>
-						<a class="card-header-icon">
-							<i class="fa fa-angle-down"></i>
-						</a>
-					</div>
-				</div>
-				<div class="card-content is-hidden">
-					<div class="content has-text-centered">
-						BUY TEXT
-					</div>
-				</div>
-			</div>
-
-		</div>
-		<div class="column">
-			<div class="card card-toggle3">
-				<div class="card-image has-text-centered">
-					<i class="fa fa-3x fa-rocket"></i>
-				</div>
-				<div class="card-content">
-					<div class="content has-text-centered">
-						<h4>Sell</h4>
-						<a class="card-header-icon">
-							<i class="fa fa-angle-down"></i>
-						</a>
-					</div>
-				</div>
-				<div class="card-content is-hidden">
-					<div class="content has-text-centered">
-						SELL TEXT
-					</div>
-				</div>
-			</div>
-
-		</div>
-	</div>
-</section>
-
-
-
-
+  
   <script src="./javascript/home.js"></script>
 </body>
 
