--- a/views/createEvent.html
+++ b/views/createEvent.html
@@ -9,98 +9,104 @@
   <title>Create an event</title>
 </head>
 
-<body id="creatEventBody">
+<body>
   <!-- START NAV -->
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <section class="container">
+      <a class="navbar-item" href="/">
+        <p id='nav-logo'>COMM ON</p>
+      </a>
+      <span role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </span>
+    </section>
 
-      <section class="navbar-brand">
-        <a class="navbar-item" href="/">
-          <p id='nav-logo'>COMM ON</p>
+    <section id="navbarMenu" class="navbar-menu">
+      <section class="navbar-end">
+        <a class="navbar-item" href="/home">
+          <p id='nav-logo'>Events</p>
         </a>
-        <span role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-        </span>
+        <a class="navbar-item" href="/createEvent">
+          <p id='nav-logo'>Create an Event</p>
+        </a>
+        <a class="navbar-item" href="/events">
+          <p id='nav-logo'>My Events</p>
+        </a>
+        <a class="navbar-item" href="/">
+          <p id='nav-logo'>My RSVPs</p>
+        </a>
+        <a class="navbar-item" href="/logout">
+          <p id='nav-logo'>Logout</p>
+        </a>
       </section>
-
-      <section id="navbarMenu" class="navbar-menu">
-        <section class="navbar-end">
-          <a class="navbar-item" href="/home">
-            <p id='nav-logo'>Events</p>
-          </a>
-          <a class="navbar-item" href="/events">
-            <p id='nav-logo'>My Events</p>
-          </a>
-          <a class="navbar-item" href="/">
-            <p id='nav-logo'>My RSVPs</p>
-          </a>
-          <a class="navbar-item" href="/login">
-            <p id='nav-logo'>Login</p>
-          </a>
-          <a class="navbar-item" href="/register">
-            <p id='nav-logo'>Sign Up</p>
-          </a>
-        </section>
-      </section>
+    </section>
     </section>
   </nav>
   <!-- END NAV -->
 
-  <main>
-    <form id="createEvent" action="#" method="#">
-      <fieldset>
-        <label class="label" for="title">Event Title</label>
-        <input name="title" id="eventTitle" class="input" type="text" placeholder="title" >
+  <section class="section">
+    <section class="container">
+      <section class="columns is-centered">
+        <main>
+          <form id="createEventForm" action="#" method="#">
+            <fieldset>
+              <label class="label" for="title">Event Title</label>
+              <input name="title" id="eventTitle" class="input" type="text" placeholder="title">
 
-        <label class="label" for="date">Event Date</label>
-        <input type="datetime-local" id="date" name="date_time" value="2020-04-15" min="2020-04-15" max="2025-12-31">
+              <label class="label" for="date">Event Date</label>
+              <input type="datetime-local" id="date" name="date_time" value="2020-04-15" min="2020-04-15" max="2025-12-31">
 
-        <label class="label" for="purpose">Purpose of Event</label>
-        <section class="control">
-          <section id="purpose" class="select">
-            <select name="purpose">
-              <option>Art</option>
-              <option>Community Service</option>
-              <option>Education</option>
-              <option>Entertainment</option>
-              <option>Food</option>
-              <option>Music</option>
-              <option>Tech</option>
-              <option>Other</option>
+              <label class="label" for="purpose">Purpose of Event</label>
+              <section class="control">
+                <section id="purpose" class="select">
+                  <select name="purpose">
+                    <option>Art</option>
+                    <option>Community Service</option>
+                    <option>Education</option>
+                    <option>Entertainment</option>
+                    <option>Food</option>
+                    <option>Music</option>
+                    <option>Tech</option>
+                    <option>Other</option>
 
-            </select>
-          </section>
-        </section>
+                  </select>
+                </section>
+              </section>
 
-        <section class="field">
-          <label class="label" for="location">Location</label>
-          <section class="control">
-            <input id="location" name="location" type="text" placeholder="location" class="input">
-          </section>
-        </section>
+              <section class="field">
+                <label class="label" for="location">Location</label>
+                <section class="control">
+                  <input id="location" name="location" type="text" placeholder="location" class="input">
+                </section>
+              </section>
 
-        <label class="label" for="description">Event Description</label>
-        <section class="control">
-          <textarea id="description" name="description" class="textarea" placeholder="Describe what the purpose of your event is!"></textarea>
-        </section>
+              <label class="label" for="description">Event Description</label>
+              <section class="control">
+                <textarea id="description" name="description" class="textarea" placeholder="Describe what the purpose of your event is!"></textarea>
+              </section>
 
-        <label class="label" for="type">Event Type</label>
-        <section class="control">
-          <section id="type" class="select">
-            <select name="type">
-              <option>In Person</option>
-              <option>Remote/Virtual</option>
-            </select>
-          </section>
-        </section>
+              <label class="label" for="type">Event Type</label>
+              <section class="control">
+                <section id="type" class="select">
+                  <select name="type">
+                    <option>In Person</option>
+                    <option>Remote/Virtual</option>
+                  </select>
+                </section>
+              </section>
+              
+            </fieldset>
+            <br>
+            <input class="button is-link is-light" type="submit" value="Submit Event" />
+          </form>
+        </main>
 
-      </fieldset>
+      </section>
+    </section>
+  </section>
 
-      <input class="button is-link is-light" type="submit" value="Submit Event" />
-    </form>
-  </main>
   <script src="javascript/createEvent.js" charset="utf-8"></script>
 </body>
 
